# py-sqlshell

./: .editorconfig  .gitignore  README.md  build.sh  check-code.sh  dock.sh  pyproject.toml  sample.cfg  sqlshell.py
docker/: Dockerfile  README.md  editrc  inputrc  sqlshell.cfg  zshrc
sqlshell/: __init__.py  config.py
