# Project configuration for sqlshell.
#
# The build process uses the Python "build" tool as the build front-end and
# setuptools as the build back-end. See comments in [build-system], below.

# -----------------------------------------------------------------------------
# Project configuration
# -----------------------------------------------------------------------------

[project]
name = "sqlshell"
# Version is resolved from the sqlshell.VERSION constant. README is also
# dynamically discovered. See [tools.setuptools.dynamic], below.
dynamic = ["version", "readme"]
dependencies = [
  "click>=8.1.7,<9.0.0",
  "SQLAlchemy>=2.0.29,<3.0.0",
  "pandas>=2.2.3,<3.0.0",
  "termcolor>=2.5.0,<3.0.0"
]
description = "A very simple SQL shell, using SQLAlchemy."
requires-python = ">= 3.11"
authors = [
  {name = "Brian Clapper", email = "bmc@clapper.org"}
]
maintainers = [
  {name = "Brian Clapper", email = "bmc@clapper.org"}
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  "Intended Audience :: Developers",
  "Topic :: Database",
  "License :: OSI Approved :: Apache Software License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/bmc/py-sqlshell"

[project.scripts]
sqlshell = "sqlshell:main"

# -----------------------------------------------------------------------------
# Build configuration
# -----------------------------------------------------------------------------

[build-system]
# Use https://github.com/pypa/build
# (python -m build)
# See https://packaging.python.org/en/latest/glossary/#term-Build-Frontend
# and https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Ignore the "docker" subdirectory. It's not a Python package, but
# setuptools will bundle it in the wheel if it's not explicitly excluded.
exclude = ["docker*"]

[tool.setuptools.dynamic]
version = {attr = "sqlshell.VERSION"}
readme = {file = ["README.md"]}

# -----------------------------------------------------------------------------
# Tool-specific configurations
# -----------------------------------------------------------------------------

[tool.black]
line-length = 79
target-version = ['py311']
extend-exclude = '''
^/venv
'''

[tool.isort]
profile = "black"
src_paths = ["*.py"]

# No test package yet. (This is a command utility that relies on user-input.)
# Testing it automatically is challenging.
#[tool.pytest.ini_options]
#pythonpath = ["."]

[tool.pyright]
# pyright is a type checker.
venvPath = "venv"
include = ["./*.py"]
exclude = ["./tasks.py", "bin"]

